# chatboot-cocoluventas

./: .dockerignore  .dockerignore.hybrid  .editorconfig  .env.development  .env.example  .env.optimizado  .env.staging  .gitignore  1_package_project.bat  2_transfer_to_server.bat  3_deploy_remote.bat  4_configure_dns_ssl.bat  ANALISIS_COMPLETO_FUNCIONALIDADES.md  ANALISIS_COMPLETO_RUST_API.md  ANALISIS_COMPLETO_SISTEMA.md  ANALISIS_DEPLOYMENT_COMPLETO.md  ANALISIS_SRC_VS_SRC-TS.md  ANALYSIS_RUST_VS_NODE.md  ARQUITECTURA_COMPLETA_CHECKLIST.md  ARQUITECTURA_DEVOPS.md  ARQUITECTURA_HIBRIDA_MEJORADA.md  ARQUITECTURA_SENIOR.md  ARQUITECTURA_VISUAL.md  BUILDERBOT_PROVIDERS.md  CATALOGO-REAL-IMPLEMENTADO.md  CHECKLIST_VERIFICACION.md  COMIENZA_AQUI.txt  COMPILACION_EXITOSA.md  CONFIGURACION-META.md  CONTRIBUTING.md  CONVERTIR-TOKEN-LARGA-DURACION.md  CORRECCIONES_IMPLEMENTADAS.md  CORREGIR-WEBHOOK-META.md  DEBUG-WEBHOOK-META.md  DEPLOY.md  DEPLOYMENT_700MB.md  DEPLOYMENT_DEFINITIVO.md  DEPLOYMENT_HIBRIDO_700MB.md  DEPLOYMENT_RUST_ULTRA_LIGHT.md  DEPLOY_AUTO.ps1  (+254 more)
dashoffice-rust/: .env.example  .gitignore  COMPARATIVA_COMPLETA.md  CORE_CHATBOTS.md  Cargo.toml  EMPEZAR_AQUI.md  Makefile  OPTIMIZACION_EXTREMA.md  PLAN_MAESTRO.md  README.md  README_FINAL.md  SISTEMA_COMPLETO.md  SISTEMA_INDESTRUCTIBLE.md  STATUS_100.md  crear_solidjs.py  docker-compose.production.yml  docker-compose.yml  generar_sistema_completo.py  generate_all.py  🚀_SISTEMA_COMPLETO.md
dashoffice-rust/.github/workflows/: ci.yml
dashoffice-rust/bridges/venom-http/: package.json  server.js
dashoffice-rust/bridges/wwebjs-http/: package.json  server.js
dashoffice-rust/crates/ai-service/: Cargo.toml
dashoffice-rust/crates/ai-service/src/: handlers.rs  main.rs  nlp.rs  openai.rs
dashoffice-rust/crates/analytics-engine/: Cargo.toml
dashoffice-rust/crates/analytics-engine/src/: aggregator.rs  main.rs  metrics.rs  scheduler.rs
dashoffice-rust/crates/api-gateway/: Cargo.toml
dashoffice-rust/crates/api-gateway/src/: handlers.rs  main.rs  middleware.rs  routes.rs
dashoffice-rust/crates/api-gateway/src/routes/: analytics.rs  bots.rs  orders.rs  products.rs  sellers.rs  users.rs
dashoffice-rust/crates/api-gateway/tests/: api_tests.rs
dashoffice-rust/crates/bot-orchestrator/: Cargo.toml
dashoffice-rust/crates/bot-orchestrator/src/: analytics.rs  conversation.rs  flow_engine.rs  main.rs  state_machine.rs  webhook.rs
dashoffice-rust/crates/bot-orchestrator/tests/: orchestrator_tests.rs
dashoffice-rust/crates/email-service/: Cargo.toml
dashoffice-rust/crates/email-service/src/: handlers.rs  lib.rs  main.rs  queue.rs  smtp.rs  templates.rs
dashoffice-rust/crates/invoice-service/: Cargo.toml
dashoffice-rust/crates/invoice-service/src/: generator.rs  handlers.rs  lib.rs  main.rs
dashoffice-rust/crates/notification-service/: Cargo.toml
dashoffice-rust/crates/notification-service/src/: channels.rs  handlers.rs  lib.rs  main.rs  push.rs
dashoffice-rust/crates/shared/: Cargo.toml
dashoffice-rust/crates/shared/src/: config.rs  database.rs  error.rs  error_tracking.rs  lib.rs  logging.rs  models.rs  resilience.rs  utils.rs
dashoffice-rust/crates/shared/src/models/: analytics.rs  bot.rs  conversation.rs  order.rs  product.rs  (+2 more)
dashoffice-rust/crates/shared/tests/: integration_tests.rs
dashoffice-rust/crates/support-service/: Cargo.toml
dashoffice-rust/crates/support-service/src/: handlers.rs  lib.rs  main.rs  tickets.rs
dashoffice-rust/crates/whatsapp-adapter/: Cargo.toml
dashoffice-rust/crates/whatsapp-adapter/src/: bridge.rs  main.rs  providers.rs
dashoffice-rust/crates/whatsapp-adapter/tests/: provider_tests.rs
dashoffice-rust/docker/: Dockerfile.api-gateway  Dockerfile.bot-orchestrator  Dockerfile.venom-bridge  Dockerfile.whatsapp-adapter  Dockerfile.wwebjs-bridge
dashoffice-rust/docs/: ARQUITECTURA.md  LOGGING_Y_RESILIENCIA.md  MIGRATION_GUIDE.md  WHATSAPP_ADAPTERS.md
dashoffice-rust/frontend/: Cargo.toml  Trunk.toml  index.html
dashoffice-rust/frontend-html/: index.html
dashoffice-rust/frontend-solid/: README.md  index.html  package.json  tailwind.config.js  vite.config.js
dashoffice-rust/frontend-solid/src/: App.jsx  index.css  index.jsx
dashoffice-rust/frontend-solid/src/api/: client.js
dashoffice-rust/frontend-solid/src/components/: Header.jsx  Logo.jsx  Sidebar.jsx  StatCard.jsx
dashoffice-rust/frontend-solid/src/pages/: Analytics.jsx  Bots.jsx  Conversations.jsx  Customers.jsx  Dashboard.jsx  Login.jsx  Orders.jsx  Products.jsx  Sellers.jsx  Settings.jsx
dashoffice-rust/frontend-solid/src/stores/: auth.js
dashoffice-rust/frontend/src/: lib.rs  main.rs
dashoffice-rust/frontend/src/api/: client.rs
dashoffice-rust/frontend/src/components/: animations.rs  layout.rs  loading.rs  logo.rs  mod.rs  progress.rs  quotes.rs  skeleton.rs  spinner.rs  toast.rs
dashoffice-rust/frontend/src/pages/: analytics.rs  bots.rs  conversations.rs  customers.rs  dashboard.rs  login.rs  mod.rs  not_found.rs  orders.rs  products.rs  sellers.rs  settings.rs
dashoffice-rust/frontend/src/state/: auth.rs  global.rs  mod.rs
dashoffice-rust/frontend/src/utils/: formatters.rs
dashoffice-rust/migrations/: 001_initial_schema.sql  002_error_tracking.sql
dashoffice-rust/nginx/: nginx.conf
dashoffice-rust/scripts/: deploy-production.sh  dev-setup.sh  start-dev.sh
src-rs-performance/: ADAPTADORES.md  ARQUITECTURA.md  AUTH-THEMES.md  CLI.md  Cargo-dashboard.toml  Cargo.toml  DASHBOARD-BRUTAL.md  DASHBOARD-LEPTOS.md  DASHBOARD.md  Leptos.toml  TESTING.md  cli.mjs  dashboard.html  dashboard_hybrid.html  dashboard_leptos.html
src-rs-performance/bridge/: baileys-bridge.js  venom-bridge.mjs
src-rs-performance/dashboard-leptos/src/: main.rs
src-rs-performance/dashboard-leptos/src/components/: advanced_charts.rs  mod.rs
src-rs-performance/dashboard-leptos/src/features/: export.rs
src-rs-performance/src/: dashboard.rs  dashboard_leptos.rs  main.rs  main.rs.fixed  main.rs.hybrid  main_full.rs  main_hybrid.rs  main_production.rs  main_simple.rs  main_with_leptos.rs  main_working.rs
(+1421 files in other folders)
