[workspace]
resolver = "2"

members = [
    "crates/api-gateway",
    "crates/whatsapp-adapter",
    "crates/analytics-engine",
    "crates/shared",
    "crates/bot-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DashOffice Team"]
license = "MIT"
repository = "https://github.com/dashoffice/rust"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
mongodb = "2.8"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Auth
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"
config = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async Traits
async-trait = "0.1"

# Rate Limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
