[package]
name = "cocolu_rs_perf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.7", default-features = false, features = ["http1", "macros"] }
hyper = { version = "1.4", features = ["http1", "server"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "signal", "io-std", "io-util"] }
bytes = "1.6"
