[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
prometheus.workspace = true
governor.workspace = true

# Local deps
shared = { path = "../shared" }

# Specific deps
actix-web-httpauth = "0.8"
futures = "0.3"
