[package]
name = "bot-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
mongodb.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
uuid.workspace = true

# Local deps
shared = { path = "../shared" }

# Specific deps
dashmap = "5.5"
parking_lot = "0.12"
