[package]
name = "whatsapp-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace deps
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true

# Local deps
shared = { path = "../shared" }

# Specific deps
tokio-stream = "0.1"
tower = "0.4"

[build-dependencies]
tonic-build = "0.10"
